# supervised-machine-learning

./: README.md  pyproject.toml
datasets/processed/: diabetes_full.csv  diabetes_test.csv  diabetes_train.csv  diabetes_val.csv
notebooks/models/classification/: 1.0_perceptron_model.ipynb  Perceptron vs Logist Regresion.ipynb  classification.ipynb  measure_classification_models.ipynb
notebooks/models/classification/logist_regresion/: 1.0_logist_regresion_model.ipynb  1.1.Logist_regresion_algorithm.ipynb  1.2.0.Logist_regresion_multiclase.ipynb  1.2.logist_regresion_model.ipynb  1.3.logist_regresion_turicreate.ipynb  1.4.movie_review.ipynb  1.5.Exercises.ipynb
notebooks/models/classification/naive_bayes/: 0.0_probability.ipynb  1.0_naives_bayes_model.ipynb  2.0_naives_bayes_algorithm.ipynb  3.0_naives_bayes_scikit_learn.ipynb
notebooks/models/decision_trees/: 1.0.decision_trees.ipynb  2.0.Binary_tree_scikit_learn.ipynb  2.1.Regresion_tree.ipynb  3.0.Deciding_university_admissions.ipynb  4.0.Decision_tree.ipynb  Gini_Entropy_MSE.py  _plotting.py  decision_trees.ipynb
notebooks/models/lineal_regresion/: choose_best_model.ipynb  exercise_1.ipynb  housing_prices_predict.ipynb  linear_regression_algorithm.ipynb
notebooks/models/preprocesing/: data_preprocesing_tools.ipynb  feature_scaling.ipynb
notebooks/models/regresion/: 1.0_linear_regression_algorithm.ipynb  1.2_housing_prices_predict.ipynb  1.4_exercises.ipynb  1.5_regresion_model_tools.ipynb
src/: logist_regresion.py  perceptron.py  regresion.py
(+5 files in other folders)
