[tool.poetry]
name = "supervised-machine-learning"
version = "0.1.0"
description = "Documentation and practice of superviced machine learning"
authors = ["Luis Alberto Bolaños Salazar <68343185+albertbolanoss@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13"
numpy = "^2.2.5"
pandas = "^2.2.3"
matplotlib = "^3.10.3"
scikit-learn = "^1.6.1"
notebook = "^7.4.2"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
